Adopt refactored util classes